--- a/src/pages/FourthPage.css
+++ b/src/pages/FourthPage.css
@@ -3,13 +3,14 @@
 }
 
 .fourthPage__Logo {
-    margin-top: 60px;
+    margin-top: 100px;
 }
 
 h2 {
     display:inline-block;
     vertical-align:middle;
-    font-size: 35px;
+    font-size: 32px !important;
+    font-weight: 900 !important;
     margin-left: 7px;
 }
 
@@ -20,8 +21,8 @@ h2 {
 }
 
 .progress__Four{
-    margin-top: 21px;
-    padding-bottom: 64px;
+    margin-top: 35px;
+    padding-bottom: 84px;
 }
 
 h1{
@@ -43,7 +44,7 @@ h1{
     border-radius: 7px !important;
     width: 410px;
     height: 45px !important;
-    margin-top: 25px !important;
+    margin-top: 35px !important;
     margin-left: auto !important;
     font-family: inherit !important;
 }
