--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,13 +3,14 @@
 }
 
 .homePage__Logo {
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 h2 {
     display:inline-block;
     vertical-align:middle;
-    font-size: 35px;
+    font-size: 32px !important;
+    font-weight: 900 !important;
     margin-left: 7px;
 }
 
@@ -21,7 +22,7 @@ h2 {
 
 .progress__One{
     margin-top: 21px;
-    padding-bottom: 71px;
+    padding-bottom: 41px;
 }
 
 h1{
@@ -33,6 +34,7 @@ h1{
     font-size: 14px;
     margin-top: 19px;
     margin-bottom: 41px;
+    font-weight: 500 !important;
 }
 
 .hinput__Title1{
@@ -52,7 +54,8 @@ h1{
     width: 400px;
     height: 40px;
     text-indent: 1em;
-    
+    font-family: inherit !important;
+    font-weight: 300 !important;
 }
 
 .homePage__Button {
