--- a/src/pages/SecondPage.css
+++ b/src/pages/SecondPage.css
@@ -3,13 +3,14 @@
 }
 
 .secondPage__Logo {
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 h2 {
     display:inline-block;
     vertical-align:middle;
-    font-size: 35px;
+    font-size: 32px !important;
+    font-weight: 900 !important;
     margin-left: 7px;
 }
 
@@ -21,7 +22,7 @@ h2 {
 
 .progress__Two{
     margin-top: 21px;
-    padding-bottom: 71px;
+    padding-bottom: 41px;
 }
 
 h1{
@@ -33,6 +34,7 @@ h1{
     font-size: 14px;
     margin-top: 19px;
     margin-bottom: 41px;
+    font-weight: 500 !important;
 }
 
 .sinput__Title1{
@@ -41,7 +43,6 @@ h1{
 }
 
 .sinput__Title2{
-    /* border: none; */
     margin-top: 19px;
     margin-right: 205px;
     margin-bottom: 7.5px;
@@ -60,6 +61,7 @@ h1{
     width: 400px;
     height: 40px;
     text-indent: 1em;
+    font-family: inherit !important;
 }
 
 .secondPage__Input2{
@@ -69,8 +71,9 @@ h1{
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
     border-right: none;
-    width: 110px;
+    width: 120px;
     height: 40px;
+    font-family: inherit !important;
 }
 
 .secondPage__Input3{
@@ -78,9 +81,10 @@ h1{
     border: 1px solid #d0d0e1;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     text-indent: 1em;
+    font-family: inherit !important;
 }
 
 .secondPage__Button {
