--- a/src/pages/ThirdPage.css
+++ b/src/pages/ThirdPage.css
@@ -3,13 +3,14 @@
 }
 
 .thirdPage__Logo {
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 h2 {
     display:inline-block;
     vertical-align:middle;
-    font-size: 35px;
+    font-size: 32px !important;
+    font-weight: 900 !important;
     margin-left: 7px;
 }
 
@@ -21,7 +22,7 @@ h2 {
 
 .progress__Three{
     margin-top: 21px;
-    padding-bottom: 71px;
+    padding-bottom: 41px;
 }
 
 h1{
@@ -33,6 +34,7 @@ h1{
     font-size: 14px;
     margin-top: 19px;
     margin-bottom: 41px;
+    font-weight: 500 !important;
 }
 
 .thirdPage__Selection1, .thirdPage__Selection2{
