--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -59,7 +59,7 @@ h1{
 }
 
 .homePage__Button {
-    background-color: #751aff !important;
+    background-color: #664DE5 !important;
     border: none !important;
     color: white !important;
     font-weight: 200 !important;
