--- a/src/pages/FourthPage.css
+++ b/src/pages/FourthPage.css
@@ -36,7 +36,7 @@ h1{
 }
 
 .fourthPage__Button {
-    background-color: #751aff !important;
+    background-color: #664DE5 !important;
     border: none !important;
     color: white !important;
     font-weight: 200 !important;
